# pa4-2

./: CMakeLists.txt  bank_robbery.c  banking.h  pa23.c  pa23.h
pa3/: pa23.c
pa4/: pa23.c  pa23.h
